--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,44 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  font-family: 'Merriweather Sans', sans-serif;
+  background-color: #2bd1fc;
+  color: #c04df9;
+}
+
+.page-title {
+  color: #ff3f3f;
+  padding: 2rem;
+  font-size: 3rem;
+}
+
+h1 {
+  width: 100%;
+  text-align: center;
+}
+
+.main-section {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0.5rem;
+}
+
+p {
+  padding-left: 0.3rem;
+  padding-right: 0.1rem;
+}
+
+.main-section section {
+  width: 25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #f3ea5f;
+}
+
+img {
+  min-height: 15rem;
 }
